--- a/styles.css
+++ b/styles.css
@@ -74,15 +74,37 @@ header h1 {
 
 code {
     display: block;
-    white-space: pre-wrap!important;
+    white-space: pre!important;
+    overflow-x: scroll;
     background-color: #020202;
-    color: #89ef89;
+    color: #e2e2e2;
     width: 100%;
     min-width: 480px;
     border-radius: 5px;
     padding: 0 6px;
     margin: auto;
-    
+    margin-bottom: 24px;
+}
+
+
+code::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+code::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+code::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
 }
 
 .score-line-container {
@@ -97,7 +119,7 @@ code {
 }
 
 .score-line-number {
-    display: inline;
+    display: inline-block;
     color: white;
     padding-left: 6px;
     height: 24px;
@@ -113,14 +135,22 @@ code {
 
 
 .score-line-code {
-    display: inline;
-    margin-left: 12px;
+    display: inline-block;
+    position: relative;
+    left: 14px;
+    margin: 0;
+}
+
+.score-line-comment {
+    color: cornflowerblue;
 }
 
 .file-selector-container {
     display: flex;
     justify-content: space-between;
+    /* IF STOP AND PLAY ARE INCLUDED */
     width: 480px;
+    width: 320px;
     /* margin-right: 6px; */
 }
 
