--- a/styles.css
+++ b/styles.css
@@ -8,19 +8,27 @@
 html {
     overflow-x: hidden;
     margin: 0;
+    padding: 0;
     width:100%; height: 100%;
 }
 
 body, #app, #app > div {
     font-family: "Lekton", "Courier New", Courier, monospace;
     margin: 0;
-    width:100%; height: 100%;
+    top: 0;
+    width:100%;
+    height: 100%;
 }
 
 .main-container {
-    display: block;
+    left: 0;
+    right: 0;
+    position: relative;
+    display: inline-block;
     box-sizing: border-box;
-    padding: 0 10vw;
+    padding: 24px 10vw;
+    min-width: 600px;
+    /* max-width: 1200px; */
 }
 
 header {
@@ -30,6 +38,13 @@ header {
 
 header h1 {
     text-align: center;
+}
+
+#dropzone {
+    /* pointer-events: none; */
+    position:   fixed;
+    width:      100%;
+    height:     100%;
 }
 
 .drop-overlay {
@@ -222,9 +237,28 @@ code::-webkit-scrollbar-thumb
     width: 14px;
 }
 
-.files-list-column .p1val,.tempoval {
+.tempoval {
     height: 24px;
     width: 78px;
     margin: 0 12px;
     margin-bottom: 4px;
+}
+
+.p1val {
+    height: 32px;
+    width: 64px;
+    margin: 8px;
+    /* padding: 16px 0; */
+}
+
+.inline-dropdown {
+    display: inline-block;
+    width: 160px;
+    margin-left: 20px;
+    margin-top: 7px;
+    position: absolute!important;
+}
+
+.inline-dropdown-right {
+    margin-left: 200px;
 }
